Changed Logo, Shifted graph position worked on other formatting issues

--- a/static/style.css
+++ b/static/style.css
@@ -19,6 +19,15 @@ html, body {
     padding: 0;
 }
 
+
+#Week_Charts {
+    position: absolute;
+    top: 0;
+    display: none;
+    padding: 0;
+    margin: 0;
+}
+
 /*
 #map {
   height: 70%;
